--- a/style.css
+++ b/style.css
@@ -4,3 +4,47 @@ body {
 	background-color: #bc9b9b;
 	font-size: 42px;
 }
+
+.clock {
+	width: 300px;
+	height: 300px;
+	border: 20px solid #d4ddc6;
+	border-radius: 50%;
+	margin: 20px auto;
+	padding: 3px;
+	background-color: #988b76;
+}
+
+.clock-face {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	background-color: #9ca290;
+	border-radius: 50%;
+}
+
+.hand {
+	width: 50%;
+	height: 10px;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	transform-origin: 100%;
+}
+
+.min-hand {
+	background-color: #ddd;
+}
+
+.hour-hand {
+	width: 40%;
+	transform: translate(25%, -50%);
+	background-color: #ddd;
+	z-index: 1;
+}
+
+.sec-hand {
+	height: 3px;
+	background-color: #a53c3c;
+	z-index: 2;
+}
